Refactor requirements and implement user registration with JWT authentication

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,37 +1,18 @@
-Django==3.1.2
-celery[redis]
-gunicorn
-gevent
-hiredis
-django-celery-beat
-django-redis
+Django
 djangorestframework
+django-filter
 django-cors-headers
-django-cms
-django-treebeard
-django-db-logger
-django-health-check
-django-celery-results
-django-watchman
-django-debug-toolbar
-django-storages
-django-rest-swagger
-django-sekizai
-djangorestframework
-django-filter
-numpy
-pandas
-paramiko
-pillow
-psycopg2-binary
-python-nmap
-PyQt5
-redis
-requests
-scp
-watchdog
-pysmb
-markdown
 django-allauth
-django-waffle
-django-filter
+dj-rest-auth
+django-redis
+djangorestframework-simplejwt
+PyJWT==v1.7.1
+redis
+psycopg2-binary
+markdown
+gunicorn
+python-nmap
+requests
+pillow
+django-rest-swagger
+decode
