--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -6,6 +6,7 @@ django-allauth
 dj-rest-auth
 django-redis
 djangorestframework-simplejwt
+django-debug-toolbar
 PyJWT==v1.7.1
 redis
 psycopg2-binary
